Overflow error solved

--- a/src/Landing-Page/style.css
+++ b/src/Landing-Page/style.css
@@ -186,6 +186,7 @@ body{
     background-image: linear-gradient(0deg, transparent, rgba(0, 0, 0, 0.835));
     position: absolute;
     z-index: 1;
+    overflow: hidden;
 }
 
 .container .text{
